[package]
name = "pd_server"
version = "0.3.0"
authors = ["Ben Brunton <ben.b.brunton@gmail.com>"]

[dependencies]
gotham = "0.2.0"
gotham_derive = "0.2.0"
toml = "0.2"
hyper = "0.11"
mime = "0.3"
futures = "0.1"
mysql = "12.3.1"
cookie = "0.2"
tera = "0.11.7"
lazy_static = "0.2.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0.44"
env_logger = "0.3.5"
log = "0.3.6"
logger = "0.2.0"
pusoy_dos = "0.1.0"
staticfile = "0.3.1"
time = "0.1.35"
rand = "0.3"
url = "1.2.5"
urlencoded = "0.4.1"
chrono = "0.4.0"
schedule_recv = "0.1.0"
regex = "0.2"
tokio-core = "0.1"
